<resources>
    <string name="app_name">LightApp</string>

    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha errada</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="auth_failed">Falha na autenticação</string>
    <string name="email_not_found">Email não encontrado</string>

    <string name="report_generated">Relatório gerado</string>
    <string name="report_generating">Gerando relatório</string>
    <string name="event_created">Evento criado</string>
    <string name="friend_list_added">Amigo adicionado à lista</string>
    <string name="friend_list_removed">Amigo removido da lista</string>
    <string name="friend_group_added">Amigo(s) adicionados ao grupo</string>
    <string name="friend_added">Usuário adicionado como amigo</string>

    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Registrar</string>
    <string name="action_ok">Ok</string>
    <string name="action_add">Adicionar</string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_send">Enviar</string>
    <string name="action_create">Criar</string>

    <string name="add_friend">Adicionar amigo</string>
    <string name="add_member">Adicionar amigos ao grupo</string>
    <string name="add_patient">Adicionar paciente</string>
    <string name="create_group">Criar grupo</string>
    <string name="create_event">Criar evento</string>
    <string name="select_group">Selecione um grupo</string>

    <string name="isPrivate">Privado</string>
    <string name="required">Obrigatório</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_message">Escreva uma mensagem...</string>
    <string name="prompt_group_name">Informe o nome do grupo</string>
    <string name="prompt_event_name">Nome do evento</string>
    <string name="prompt_event_location">Local</string>
    <string name="prompt_event_date">Data</string>
    <string name="prompt_event_time">Horário</string>
    <string name="prompt_patient_email">Email do paciente</string>
    <string name="prompt_friend_email">Email do amigo</string>

    <string name="report">Relatório</string>
    <string name="report_explanation">A quantidade de frases e o cálculo de crescimento apresentados aqui são feitos levando em conta o último relatório gerado. \n\n \"- - -\" : Não houve palavras desta classificação no último relatório.</string>
    <string name="report_timestamp">Data de geração</string>
    <string name="report_positive">Palavras positivas</string>
    <string name="report_negative">Palavras negativas</string>
    <string name="report_neutral">Palavras neutras</string>
    <string name="report_classified">Palavras classificadas</string>
    <string name="report_not_classified">Palavras não classificadas</string>
    <string name="report_total_words">Total de palavras</string>
    <string name="report_positive_phrase">Frases positivas</string>
    <string name="report_negative_phrase">Frases negativas</string>
    <string name="report_neutral_phrase">Frases neutras</string>
    <string name="event_group">Grupo do evento</string>
    <string name="event_location">Local</string>
    <string name="event_date">Data</string>
    <string name="event_time">Horário</string>
    <string name="no_growth">- - -</string>

</resources>
