<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/event_location"
            android:text="@string/event_location"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/label_size"/>

        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/event_date"
            android:text="@string/event_date"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/label_size"/>

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/event_time"
            android:text="@string/event_time"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/label_size"/>

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>
</FrameLayout>
